--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# Configurações do banco de dados
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+
+server.port=${SERVER_PORT}
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+application-description=API responsável por gerenciar recursos dos pedidos
+application-version=1.0.0
+
+#Swagger
+api-security.request.enable-swagger=true
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-request-duration=true
 
