--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ springdoc.swagger-ui.operations-sorter=method
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.display-request-duration=true
 
+feign.client.url.produto=${PRODUTO_API}
+
