--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ springdoc.swagger-ui.display-request-duration=true
 
 feign.client.url.produto=${PRODUTO_API}
 
+#Kafka
+mensageria.kafka.topic.pedido.processado=pedido.processado
+spring.kafka.bootstrap-servers=localhost:9092
+
