--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,7 @@ feign.client.url.produto=${PRODUTO_API}
 
 #Kafka
 mensageria.kafka.topic.pedido.processado=pedido.processado
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.properties.schema.registry.url=http://127.0.0.1:8082
+spring.kafka.producer.autoOffsetReset=earliest
 
