OJLP-02 Ajustando envio de mensagem kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configurações do banco de dados
+# Configuracoes do banco de dados
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 server.port=${SERVER_PORT}
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-application-description=API responsável por gerenciar recursos dos pedidos
+application-description=API responsavel por gerenciar recursos dos pedidos
 application-version=1.0.0
 
 #Swagger
@@ -23,7 +23,9 @@ feign.client.url.produto=${PRODUTO_API}
 
 #Kafka
 mensageria.kafka.topic.pedido.processado=pedido.processado
-spring.kafka.bootstrap-servers=127.0.0.1:9092
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.properties.schema.registry.url=http://127.0.0.1:8082
 spring.kafka.producer.autoOffsetReset=earliest
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 
