--- a/pom.xml
+++ b/pom.xml
@@ -73,13 +73,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
-
+		<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -236,6 +237,7 @@
 				<version>${avro.version}</version>
 				<executions>
 					<execution>
+						<id>schemas</id>
 						<phase>generate-sources</phase>
 						<goals>
 							<goal>schema</goal>
