docs: adicionando informacoes a documentacao swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,11 @@ api-security.request.enable-swagger=true
 springdoc.swagger-ui.operations-sorter=method
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.display-request-duration=true
+swagger.appVersion=1.0
+swagger.appDescription=API responsavel por gerenciar recursos dos pedidos.
+swagger.contactEmail=brunoabneves97@gmail.com
+swagger.contactName=Bruno Neves
+swagger.contactUrl=https://www.linkedin.com/in/brunoabneves/
 
 feign.client.url.produto=${PRODUTO_API}
 
